LibretroRT/libretro.h

	/* Hack applied for MSVC when compiling in C89 mode
	* as it isn't C99-compliant. */
#define bool unsigned char
#define true 1
	/* The JOYPAD is called RetroPad. It is essentially a Super Nintendo
	* controller, but with additional L2/R2/L3/R3 buttons, similar to a
	* PS1 DualShock. */
#define RETRO_DEVICE_JOYPAD       1
	struct retro_game_info;
	struct retro_system_info
	{
		/* All pointers are owned by libretro implementation, and pointers must
		* remain valid until retro_deinit() is called. */

		const char *library_name;      /* Descriptive name of library. Should not
									   * contain any version numbers, etc. */
		const char *library_version;   /* Descriptive version of core. */

		const char *valid_extensions;  /* A string listing probably content
									   * extensions the core will be able to
									   * load, separated with pipe.
									   * I.e. "bin|rom|iso".
									   * Typically used for a GUI to filter
									   * out extensions. */

									   /* If true, retro_load_game() is guaranteed to provide a valid pathname
									   * in retro_game_info::path.
									   * ::data and ::size are both invalid.
									   *
									   * If false, ::data and ::size are guaranteed to be valid, but ::path
									   * might not be valid.
									   *
									   * This is typically set to true for libretro implementations that must
									   * load from file.
									   * Implementations should strive for setting this to false, as it allows
									   * the frontend to perform patching, etc. */
		bool        need_fullpath;

		/* If true, the frontend is not allowed to extract any archives before
		* loading the real content.
		* Necessary for certain libretro implementations that load games
		* from zipped archives. */
		bool        block_extract;
	};
	struct retro_system_av_info
	{
		struct retro_game_geometry geometry;
		struct retro_system_timing timing;
	};
	struct retro_game_info
	{
		const char *path;       /* Path to game, UTF-8 encoded.
								* Sometimes used as a reference for building other paths.
								* May be NULL if game was loaded from stdin or similar,
								* but in this case some cores will be unable to load `data`.
								* So, it is preferable to fabricate something here instead
								* of passing NULL, which will help more cores to succeed.
								* retro_system_info::need_fullpath requires
								* that this path is valid. */
		const void *data;       /* Memory buffer of loaded game. Will be NULL
								* if need_fullpath was set. */
		size_t      size;       /* Size of memory buffer. */
		const char *meta;       /* String of implementation specific meta-data. */
	};
	/* Callbacks */

	/* Environment callback. Gives implementations a way of performing
	* uncommon tasks. Extensible. */
	typedef bool (RETRO_CALLCONV *retro_environment_t)(unsigned cmd, void *data);
	/* Render a frame. Pixel format is 15-bit 0RGB1555 native endian
	* unless changed (see RETRO_ENVIRONMENT_SET_PIXEL_FORMAT).
	*
	* Width and height specify dimensions of buffer.
	* Pitch specifices length in bytes between two lines in buffer.
	*
	* For performance reasons, it is highly recommended to have a frame
	* that is packed in memory, i.e. pitch == width * byte_per_pixel.
	* Certain graphic APIs, such as OpenGL ES, do not like textures
	* that are not packed in memory.
	*/
	typedef void (RETRO_CALLCONV *retro_video_refresh_t)(const void *data, unsigned width,
		unsigned height, size_t pitch);
	/* Renders a single audio frame. Should only be used if implementation
	* generates a single sample at a time.
	* Format is signed 16-bit native endian.
	*/
	typedef void (RETRO_CALLCONV *retro_audio_sample_t)(int16_t left, int16_t right);
	/* Renders multiple audio frames in one go.
	*
	* One frame is defined as a sample of left and right channels, interleaved.
	* I.e. int16_t buf[4] = { l, r, l, r }; would be 2 frames.
	* Only one of the audio callbacks must ever be used.
	*/
	typedef size_t(RETRO_CALLCONV *retro_audio_sample_batch_t)(const int16_t *data,
		size_t frames);
	/* Polls input. */
	typedef void (RETRO_CALLCONV *retro_input_poll_t)(void);
	/* Queries for input for player 'port'. device will be masked with
	* RETRO_DEVICE_MASK.
	*
	* Specialization of devices such as RETRO_DEVICE_JOYPAD_MULTITAP that
	* have been set with retro_set_controller_port_device()
	* will still use the higher level RETRO_DEVICE_JOYPAD to request input.
	*/
	typedef int16_t(RETRO_CALLCONV *retro_input_state_t)(unsigned port, unsigned device,
		unsigned index, unsigned id);
	/* Sets callbacks. retro_set_environment() is guaranteed to be called
	* before retro_init().
	*
	* The rest of the set_* functions are guaranteed to have been called
	* before the first call to retro_run() is made. */
	RETRO_API void retro_set_environment(retro_environment_t);
	RETRO_API void retro_set_video_refresh(retro_video_refresh_t);
	RETRO_API void retro_set_audio_sample(retro_audio_sample_t);
	RETRO_API void retro_set_audio_sample_batch(retro_audio_sample_batch_t);
	RETRO_API void retro_set_input_poll(retro_input_poll_t);
	RETRO_API void retro_set_input_state(retro_input_state_t);
	/* Library global initialization/deinitialization. */
	RETRO_API void retro_init(void);
	RETRO_API void retro_deinit(void);
	/* Must return RETRO_API_VERSION. Used to validate ABI compatibility
	* when the API is revised. */
	RETRO_API unsigned retro_api_version(void);
	/* Gets statically known system info. Pointers provided in *info
	* must be statically allocated.
	* Can be called at any time, even before retro_init(). */
	RETRO_API void retro_get_system_info(struct retro_system_info *info);
	/* Gets information about system audio/video timings and geometry.
	* Can be called only after retro_load_game() has successfully completed.
	* NOTE: The implementation of this function might not initialize every
	* variable if needed.
	* E.g. geom.aspect_ratio might not be initialized if core doesn't
	* desire a particular aspect ratio. */
	RETRO_API void retro_get_system_av_info(struct retro_system_av_info *info);
	/* Sets device to be used for player 'port'.
	* By default, RETRO_DEVICE_JOYPAD is assumed to be plugged into all
	* available ports.
	* Setting a particular device type is not a guarantee that libretro cores
	* will only poll input based on that particular device type. It is only a
	* hint to the libretro core when a core cannot automatically detect the
	* appropriate input device type on its own. It is also relevant when a
	* core can change its behavior depending on device type. */
	RETRO_API void retro_set_controller_port_device(unsigned port, unsigned device);
	/* Resets the current game. */
	RETRO_API void retro_reset(void);
	/* Runs the game for one video frame.
	* During retro_run(), input_poll callback must be called at least once.
	*
	* If a frame is not rendered for reasons where a game "dropped" a frame,
	* this still counts as a frame, and retro_run() should explicitly dupe
	* a frame if GET_CAN_DUPE returns true.
	* In this case, the video callback can take a NULL argument for data.
	*/
	RETRO_API void retro_run(void);
	/* Returns the amount of data the implementation requires to serialize
	* internal state (save states).
	* Between calls to retro_load_game() and retro_unload_game(), the
	* returned size is never allowed to be larger than a previous returned
	* value, to ensure that the frontend can allocate a save state buffer once.
	*/
	RETRO_API size_t retro_serialize_size(void);
	/* Serializes internal state. If failed, or size is lower than
	* retro_serialize_size(), it should return false, true otherwise. */
	RETRO_API bool retro_serialize(void *data, size_t size);
	RETRO_API bool retro_unserialize(const void *data, size_t size);
	/* Loads a game. */
	RETRO_API bool retro_load_game(const struct retro_game_info *game);
	/* Unloads a currently loaded game. */
	RETRO_API void retro_unload_game(void);
	/* Gets region of game. */
	RETRO_API unsigned retro_get_region(void);